# mira-tools

./: .gitignore  CMakeLists.txt  README.md  mira_constants.h  thismira-tools.sh  thismira-tools.sh.in
CuPy/: CMakeLists.txt  cupy_functions.hpp  cupy_functions.py  cupy_qdc.py  cupy_test.py  test.cpp
decoder/: CMakeLists.txt  decode_mira_data_main.cpp  mira_decoder.cpp  mira_decoder.hpp
gpufit/: CMakeLists.txt  bgsubtract_mira_dump_main.cpp  gpufit_mira_data_main.cpp  mira_BGSubtract.cpp  mira_BGSubtract.hpp  mira_FitThreadPool.cpp  mira_FitThreadPool.hpp  mira_FitterClass.cpp  mira_FitterClass.hpp  mira_gpufit.cpp  mira_gpufit.hpp
parquet/: CMakeLists.txt  mira_Parquet.cpp  mira_Parquet.hpp  mira_dump_parquet_main.cpp
stream_viewer/: package.json
stream_viewer/api/: index.js
stream_viewer/public/: App.js  FitResults.js  Waveform.js  index.html
streaming/: CMakeLists.txt  babiesDump.cpp  decode_stream_data_gpu_main.cpp  decode_stream_data_main.cpp  mira_ParquetGPU.cpp  mira_ParquetGPU.hpp  mira_streaming.hpp  stream_from_rawdata_file.cpp  stream_from_rawdata_file_gpufit.cpp  testConsumer.cpp  testConsumer.py
viewer/: package.json
viewer/api/: index.js
viewer/public/: App.js  Subtracted.js  Waveform.js  fitresult.html  fitresult.js  index.html  waveform.js
